--- a/css/marmostats.css
+++ b/css/marmostats.css
@@ -335,9 +335,3 @@ li {
     float: right;
     right: 0px;
 }
-
-#marmostats-overview-header {
-    padding: 3px;
-    overflow: hidden;
-    z-index: 1;
-}
